added compilation of TPlot.cxx and linking TPlot.o for plot.exe

--- a/code/Makefile
+++ b/code/Makefile
@@ -24,8 +24,11 @@ TVectorMeson.o: TVectorMeson.cxx TVectorMeson.h
 TXMLParser.o: TXMLParser.cxx TXMLParser.h
 	gcc -o $(OBJ)/$@ -c $< -I inc/ $(FLAGS_OBJ)
 
-plots.exe: plots.o TVectorMeson.o TXMLParser.o
-	gcc -o plots.exe $(OBJ)/plots.o $(OBJ)/TVectorMeson.o $(OBJ)/TXMLParser.o $(FLAGS) -lMinuit -lstdc++  -lMLP -lXMLIO
+TPlot.o: TPlot.cxx TPlot.h
+	gcc -o $(OBJ)/$@ -c $< -I inc/ $(FLAGS_OBJ)
+
+plots.exe: plots.o TVectorMeson.o TXMLParser.o TPlot.o
+	gcc -o plots.exe $(OBJ)/plots.o $(OBJ)/TVectorMeson.o $(OBJ)/TXMLParser.o $(OBJ)/TPlot.o $(FLAGS) -lMinuit -lstdc++  -lMLP -lXMLIO
 
 .PHONY: clean
 clean:
