changed Makefile - not compiling TXMLParser but linking against it

--- a/code/Makefile
+++ b/code/Makefile
@@ -16,19 +16,16 @@ vpath %.h   $(INC)
 all: plots.exe
 
 plots.o: plots.cxx
-	gcc -o $(OBJ)/$@ -c $< -I inc/ $(FLAGS_OBJ)
+	gcc -o $(OBJ)/$@ -c $< -I inc/ $(FLAGS_OBJ) -I$(TXMLPARSER)/inc
 
 TVectorMeson.o: TVectorMeson.cxx TVectorMeson.h
-	gcc -o $(OBJ)/$@ -c $< -I inc/ $(FLAGS_OBJ)
-
-TXMLParser.o: TXMLParser.cxx TXMLParser.h
 	gcc -o $(OBJ)/$@ -c $< -I inc/ $(FLAGS_OBJ)
 
 TPlot.o: TPlot.cxx TPlot.h
 	gcc -o $(OBJ)/$@ -c $< -I inc/ $(FLAGS_OBJ)
 
-plots.exe: plots.o TVectorMeson.o TXMLParser.o TPlot.o
-	gcc -o plots.exe $(OBJ)/plots.o $(OBJ)/TVectorMeson.o $(OBJ)/TXMLParser.o $(OBJ)/TPlot.o $(FLAGS) -lMinuit -lstdc++  -lMLP -lXMLIO
+plots.exe: plots.o TVectorMeson.o TPlot.o
+	gcc -o plots.exe $(OBJ)/plots.o $(OBJ)/TVectorMeson.o $(OBJ)/TPlot.o $(FLAGS) -lMinuit -lstdc++ -lMLP -lXMLIO -lTXMLParser -L$(TXMLPARSER)/lib
 
 .PHONY: clean
 clean:
