added another executable to plot the Ratoin between psi2S and Jpsi gammap cross-section

--- a/code/Makefile
+++ b/code/Makefile
@@ -13,9 +13,12 @@ vpath %.cxx $(SRC)
 vpath %.C   $(SRC)
 vpath %.h   $(INC)
 
-all: plots.exe
+all: plots.exe plot_R.exe
 
 plots.o: plots.cxx
+	gcc -o $(OBJ)/$@ -c $< -I$(TXMLPARSER)/inc -I inc/ $(FLAGS_OBJ)
+
+plot_R.o: plot_R.cxx
 	gcc -o $(OBJ)/$@ -c $< -I$(TXMLPARSER)/inc -I inc/ $(FLAGS_OBJ)
 
 TVectorMeson.o: TVectorMeson.cxx TVectorMeson.h
@@ -30,7 +33,10 @@ TFitter.o: TFitter.cxx TFitter.h
 plots.exe: plots.o TVectorMeson.o TPlot.o TFitter.o
 	gcc -o plots.exe $(OBJ)/plots.o $(OBJ)/TVectorMeson.o $(OBJ)/TPlot.o $(OBJ)/TFitter.o $(FLAGS) -lMinuit -lstdc++ -lMLP -lXMLIO -lTXMLParser -L$(TXMLPARSER)/lib
 
+plot_R.exe: plot_R.o TVectorMeson.o TPlot.o TFitter.o
+	gcc -o plot_R.exe $(OBJ)/plot_R.o $(OBJ)/TVectorMeson.o $(OBJ)/TPlot.o $(OBJ)/TFitter.o $(FLAGS) -lMinuit -lstdc++ -lMLP -lXMLIO -lTXMLParser -L$(TXMLPARSER)/lib
+
 .PHONY: clean
 clean:
 	-rm -rf $(OBJ)/*.o
-	-rm -rf plots.exe
+	-rm -rf *.exe
